--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]><html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]-->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -161,9 +161,9 @@
 <!-- Scripts -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/libs/jquery.metadata.js"></script>
-<script type="text/javascript" src="assets/js/boilerplate.js"></script>
-<script type="text/javascript" src="assets/js/boilerplate.utils.js"></script>
-<script type="text/javascript" src="assets/js/boilerplate.filter.js"></script>
+<script type="text/javascript" src="assets/js/Site.js"></script>
+<script type="text/javascript" src="assets/js/Site.utils.js"></script>
+<script type="text/javascript" src="assets/js/Site.filter.js"></script>
 <!-- End of Scripts -->
 </body>
 </html>
